--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@ body {
   background-size: cover; }
 
 #head {
+  font-size: 125px;
+  color: red;
+  font-weight: 500;
+  text-align: center;
   width: 100%;
   height: 125px; }
 
