--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,13 +1,14 @@
 body {
   background-image: url(./../assets/winter.jpg);
-  background-size: cover;
-}
+  background-size: cover; }
 
-
-#head{
-width: 100%;
-height: 125px;
-}
+#head {
+  font-size: 125px;
+  color: red;
+  font-weight: 500;
+  text-align: center;
+  width: 100%;
+  height: 125px; }
 
 
 div {
